second commit and project part added

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <ul>
                         <li><a href="#header">Home</a></li>
                         <li><a href="#about">About</a></li>
-                        <li><a href="#projects">projects</a></li>
+                        <li><a href="#projects">Projects</a></li>
                         <li><a href="#contact">Contact</a></li>
                     </ul>
                 </div>
@@ -36,7 +36,7 @@
     <!-------------------- About part --------------------->
     <div class="about" id="about">
         <div class="about-container">
-            <h1>About Me</h1>>
+            <h1>About Me</h1>
         </div>
         <div class="about-content-text">
             <div class="about-text">
@@ -68,11 +68,41 @@
 
         </div>
     </div>
- <!-------------------- project section---------------------- -->
-    <div class="projects" id="projects">
+ <!-------------------- project section------------------------------------------------------------- -->
+    <div class="project_page" id="projects">
         <div class="project-header">
             <h1>My Projects</h1>
         </div>
+
+        <div class="projects">
+            <div class="project">
+                <img src="pics/todo.jpeg">
+                <div class="layer">
+                    <h3>ToDo List</h3>
+                    <p>"I developed a ToDo application using Django, implementing user authentication, CRUD operations, and real-time updates for task completion."</p>
+                    <a href="https://github.com/Akhilus26/ToDo-app-using-django"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                </div>
+            </div>
+
+            <div class="project">
+                <img src="pics/Youtube.jpg">
+                <div class="layer">
+                    <h3>Youtube Vedio Downloader</h3>
+                    <p>"I developed a Youtube vedio downloader using python and Tkinter."</p>
+                    <a href="https://github.com/Akhilus26/Youtube-vedio-Downloader"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                </div>
+            </div>
+
+            <div class="project">
+                <img src="pics/odd-even-cricket.webp">
+                <div class="layer">
+                    <h3>Odd or Even Cricket Game</h3>
+                    <p>"I developed a Odd or even Cricket Game using python and Tkinter."</p>
+                    <a href="https://github.com/Akhilus26/Odd-or-Even-Cricket-game-using-python-and-UGI"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                </div>
+            </div>
+        </div>
+        <a class="btn" href="https://github.com/Akhilus26" ><button>See more</button></a>
     </div>
    
 
@@ -85,13 +115,13 @@
                     <p ><i class="fa-regular fa-envelope"></i>akhilus321@gmail.com</p>
                     <p><i class="fa-solid fa-phone"></i>9496553323</p>
                     <div class="social-media">
-                        <a href=""><i class="fa-brands fa-square-instagram"></i></a>
+                        <a href="https://www.instagram.com/ak.h.il___/?igshid=OGQ5ZDc2ODk2ZA%3D%3D"><i class="fa-brands fa-square-instagram"></i></a>
                         <a href=""><i class="fa-brands fa-facebook"></i></a>
                         <a href=""><i class="fa-brands fa-twitter"></i> </a>
-                        <a href=""><i class="fa-brands fa-square-github"></i></a>
-                        <a href=""><i class="fa-brands fa-linkedin"></i></a>
+                        <a href="https://github.com/Akhilus26"><i class="fa-brands fa-square-github"></i></a>
+                        <a href="https://www.linkedin.com/in/akhil-u-s-639618297/"><i class="fa-brands fa-linkedin"></i></a>
                     </div>
-                    <a class="btn" href="./AKHILUS.pdf" ><button >MY RESUME</button></a>
+                    <a class="btn" href="./AKHIL U S.pdf" ><button >MY RESUME</button></a>
                 </div>
                 <div class="contact-right"> 
                     <form action="">
