navigation position fixed

--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
             <div class="project">
                 <img src="pics/Youtube.jpg">
                 <div class="layer">
-                    <h3>Youtube Vedio Downloader</h3>
-                    <p>"I developed a Youtube vedio downloader using python and Tkinter."</p>
+                    <h3>Youtube Video Downloader</h3>
+                    <p>"I developed a Youtube video downloader using python and Tkinter."</p>
                     <a href="https://github.com/Akhilus26/Youtube-vedio-Downloader"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
             </div>
