--- a/index.html
+++ b/index.html
@@ -19,12 +19,14 @@
                     <h1><span>A</span>KHIL</h1>
                 </a>
                 <div class="nav-links">
-                    <ul>
+                    <ul id="sidemenu">
                         <li><a href="#header">Home</a></li>
                         <li><a href="#about">About</a></li>
                         <li><a href="#projects">Projects</a></li>
                         <li><a href="#contact">Contact</a></li>
+                        <i class="fa-solid fa-xmark" onclick="closemenu()"></i>
                     </ul>
+                    <i class="fa-solid fa-bars" onclick="openmenu()"></i>
                 </div>
             </nav>
             <div class="header-txt">
@@ -121,7 +123,7 @@
                         <a href="https://github.com/Akhilus26"><i class="fa-brands fa-square-github"></i></a>
                         <a href="https://www.linkedin.com/in/akhil-u-s-639618297/"><i class="fa-brands fa-linkedin"></i></a>
                     </div>
-                    <a class="btn" href="./AKHIL U S.pdf" ><button >MY RESUME</button></a>
+                    <a class="btn resume" href="./AKHIL U S.pdf" ><button >MY RESUME</button></a>
                 </div>
                 <div class="contact-right"> 
                     <form action="">
