--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             <div class="row">
                 <div class="contact-left">
                     <h1>Contact Me</h1>
-                    <p ><i class="fa-regular fa-envelope"></i>akhilus321@gmail.com</p>
+                    <p type="email"><i class="fa-regular fa-envelope"></i>akhilus321@gmail.com</p>
                     <p><i class="fa-solid fa-phone"></i>9496553323</p>
                     <div class="social-media">
                         <a href="https://www.instagram.com/ak.h.il___/?igshid=OGQ5ZDc2ODk2ZA%3D%3D"><i class="fa-brands fa-square-instagram"></i></a>
